feat: add icon
